--- a/sandbox/views/styles.xml
+++ b/sandbox/views/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<Styles xmlns='pyviews.tk'>
+<Container xmlns='pyviews.tk'>
         <Style name='button'
                foreground='white'
                background='black'/>
@@ -15,4 +15,4 @@
         <Style name='back'
                background='black'
                foreground='white'/>
-</Styles>
+</Container>
