--- a/sandbox/views/counter.xml
+++ b/sandbox/views/counter.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <w:Container xmlns="tkinter"
              xmlns:w="pyviews.tk"
-             xmlns:import="pyviews.core.modifiers.import_global"
+             xmlns:import="pyviews.rendering.modifiers.import_global"
              xmlns:bind="pyviews.tk.modifiers.bind"
-             xmlns:global='pyviews.core.modifiers.set_global'
+             xmlns:global='pyviews.rendering.modifiers.set_global'
 
              import:Counter="sandbox.counter.Counter"
              import:Grid='pyviews.tk.geometry.GridGeometry'
              import:Pack='pyviews.tk.geometry.PackGeometry'
-             import:to_int='pyviews.core.converters.to_int'
+             import:to_int='pyviews.rendering.converters.to_int'
 
              global:vm="{Counter()}">
 
