--- a/sandbox/views/scroll.xml
+++ b/sandbox/views/scroll.xml
@@ -2,9 +2,9 @@
 <sb:Scroll xmlns="tkinter"
           xmlns:w="pyviews.tk"
           xmlns:sb='widgets'
-          xmlns:import="pyviews.core.modifiers.import_global"
+          xmlns:import="pyviews.rendering.modifiers.import_global"
           xmlns:bind="pyviews.tk.modifiers.bind"
-          xmlns:global='pyviews.core.modifiers.set_global'
+          xmlns:global='pyviews.rendering.modifiers.set_global'
 
           import:Pack='pyviews.tk.geometry.PackGeometry'
           import:ScrollVm="sandbox.scroll.ScrollVm"
